fixed layout alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,10 @@ body {
     color: white;
 }
 
+header {
+    background-image: url(/assets/images/concert-header-backsplash.jpg);
+}
+
 .primary-text-color {
     color: #C21858;
 }
@@ -17,20 +21,6 @@ body {
 
 .color-bg {
     background-color: rgba(43, 45, 70, 0.486);
-}
-
-header {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    padding-bottom: 10px;
-    background-image: url(/assets/images/concert-header-backsplash.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position-y: center;
 }
 
 form {
@@ -66,38 +56,7 @@ input {
 }
 
 
-/* main {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border: 1px solid black;
-    margin: 5px;
-    padding-bottom: 10px;
-} */
-
-
-/* #concert {
-    display: flex-row;
-    width: 50%;
-    text-align: center;
-    border: 1px solid black;
-    margin: 5px;
-    padding-bottom: 10px;
-} */
-
-
-/* #artist-bio {
-    width: 50%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-grow: 1;
-    border: 1px solid black;
-    margin: 5px;
-    padding-bottom: 10px;
-} */
-
-.video-container {
+/* .video-container {
     margin: 10px;
     text-align: center;
     display: flex;
@@ -113,4 +72,7 @@ input {
     border: 1px solid black;
     margin: 5px;
     padding-bottom: 10px;
-}
+} */
+
+
+/* after this */
